--- a/apps/server/deno.json
+++ b/apps/server/deno.json
@@ -1,5 +1,6 @@
 {
 	"name": "@app/server",
+	"version": "1.0.0",
 	"exports": "./src/mod.ts",
 	"tasks": {
 		"build": "deno compile -A -o .build/server src/mod.ts",
