--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 	"image": "mcr.microsoft.com/devcontainers/base:ubuntu",
 	"features": {
 		"ghcr.io/devcontainers-community/features/deno:1": {
-			"version": "2.1.4"
+			"version": "2.1.5"
 		},
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
 		"ghcr.io/devcontainers/features/github-cli:1": {}
@@ -21,7 +21,8 @@
 			"extensions": [
 				"denoland.vscode-deno",
 				"mhutchie.git-graph",
-				"waderyan.gitblame"
+				"waderyan.gitblame",
+				"imgildev.vscode-drizzle-snippets"
 			]
 		}
 	}
