--- a/apps/web/deno.json
+++ b/apps/web/deno.json
@@ -16,6 +16,7 @@
 		"hono": "npm:hono@4.6.16",
 		"react": "npm:react@19.0.0",
 		"react-dom": "npm:react-dom@19.0.0",
-		"vite": "npm:vite@6.0.7"
+		"vite": "npm:vite@6.0.7",
+		"better-auth": "npm:better-auth@1.1.11"
 	}
 }
