--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,12 @@
 {
 	"tasks": {
+		"db:start": "docker compose -f ./.docker/docker-compose.yaml up -d --force-recreate",
+		"db:stop": "docker compose -f ./.docker/docker-compose.yaml down",
 		"hook": "deno run -A https://deno.land/x/deno_hooks@0.1.1/mod.ts"
 	},
 	"workspace": [
-		"apps/*"
+		"apps/*",
+		"packages/*"
 	],
 	"fmt": {
 		"useTabs": true,
