--- a/apps/server/deno.json
+++ b/apps/server/deno.json
@@ -17,6 +17,7 @@
 		"pino-pretty": "npm:pino-pretty@13.0.0",
 		"zod": "npm:zod@3.24.1",
 		"zod-openapi": "npm:zod-openapi@4.2.2",
-		"better-auth": "npm:better-auth@1.1.11"
+		"better-auth": "npm:better-auth@1.1.11",
+		"ua-parser-js": "npm:ua-parser-js@2.0.0"
 	}
 }
