--- a/apps/web/deno.json
+++ b/apps/web/deno.json
@@ -8,11 +8,15 @@
 	},
 	"imports": {
 		"@/": "./src/",
+		"@app/ui/": "../../packages/ui/",
 		"@deno/vite-plugin": "npm:@deno/vite-plugin@1.0.2",
 		"@tanstack/react-router": "npm:@tanstack/react-router@1.95.1",
 		"@types/react": "npm:@types/react@19.0.3",
 		"@types/react-dom": "npm:@types/react-dom@19.0.2",
 		"@vitejs/plugin-react": "npm:@vitejs/plugin-react@4.3.4",
+		"lucide-react": "npm:lucide-react@0.473.0",
+		"tailwindcss": "npm:tailwindcss@3.4.17",
+		"postcss": "npm:postcss@8.5.1",
 		"hono": "npm:hono@4.6.16",
 		"react": "npm:react@19.0.0",
 		"react-dom": "npm:react-dom@19.0.0",
